fix(carrousel): fixed btn position and align social networks icons center in mobile

--- a/src/app/landing-footer/landing-footer.component.html
+++ b/src/app/landing-footer/landing-footer.component.html
@@ -25,8 +25,8 @@
               <a target="_blank" href="https://www.whirlpool.com.br/"><img drag-scroll-item src="../../assets/images/partners/Whirlpoow.png" /></a>
             </drag-scroll>
             <div class="footer-carousel-align">
-              <div class="footer-carousel-btn-left"><i (click)="moveLeft()" class="fas fa-chevron-left"></i></div>
-              <div class="footer-carousel-btn-right"><i (click)="moveRight()" class="fas fa-chevron-right"></i></div>
+              <div class="footer-carousel-btn-left" (click)="moveLeft()"><i class="fas fa-chevron-left"></i></div>
+              <div class="footer-carousel-btn-right" (click)="moveRight()"><i class="fas fa-chevron-right"></i></div>
             </div>
         </div>
       </div>
