--- a/src/app/landing-page-gt/landing-page-gt.component.html
+++ b/src/app/landing-page-gt/landing-page-gt.component.html
@@ -21,7 +21,7 @@
   </section>
   
   <!-- Form gt -->
-  <app-form-gv id="form"></app-form-gv>
+  <app-form-gt id="form"></app-form-gt>
 
   <section class="product-steps margin-top-and-bottom">
     <div class="container">
