--- a/src/app/form-gt/form-gt.component.scss
+++ b/src/app/form-gt/form-gt.component.scss
@@ -1398,3 +1398,14 @@ label {
         margin-left: 5px;
     }
 }
+
+.logo-talentos-globais {
+    max-width: 350px;
+    width: 100%;
+    height: 200px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    background-image: url('../../assets/images/logo-talentos-globais.png');
+    margin: auto
+}
