--- a/src/app/form-gv/form-gv.component.html
+++ b/src/app/form-gv/form-gv.component.html
@@ -7,7 +7,7 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-sm text-center">
-            <img src="assets/images/logo-voluntario-global.png" alt="Logo" class="logo">
+              <div class="logo-voluntario-global"></div>
           </div>
         </div>
         <div *ngIf="!completedSignup">
