--- a/src/app/form-gv/form-gv.component.scss
+++ b/src/app/form-gv/form-gv.component.scss
@@ -1566,3 +1566,14 @@ label {
         margin-left: 5px;
     }
 }
+
+.logo-voluntario-global {
+    max-width: 350px;
+    width: 100%;
+    height: 200px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    background-image: url('../../assets/images/logo-voluntario-global.png');
+    margin: auto
+}
