feat(landing-page): landing page + assets
AIESEC-77 - https://devmagic.atlassian.net/secure/RapidBoard.jspa?rapidView=61&modal=detail&selectedIssue=AIESEC-77

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,4 +1,164 @@
-<ul>
+<div class="col-xl-12 header">
+  <div class="header-top-triangle"></div>
+  <div class="menu">
+    <ul>
+      <li><a href="#"><img src="../../assets/images/logo-aiesec-white.png" class="aiesec-logo"></a></li>
+      <li><a href="#">VOLUNTÁRIO GLOBAL</a></li>
+      <li><a href="#">TALENTOS GLOBAIS</a></li>
+      <li><a href="#">EMPREENDEDOR GLOBAL</a></li>
+      <li><a href="#">HOSPEDE UM INTERCAMBISTA</a></li>
+    </ul>
+    <div class="container content">
+      <h1><strong>Liderança</strong></h1>
+      <p>Uma liderança sustentável é a <br> solução para um futuro melhor</p>
+      <button type="button" class="btn btn-outline-light">SAIBA MAIS</button>
+    </div>
+  </div>
+  <div class="header-bottom-triangle"></div>
+</div>
+
+<div class="row global-columns">
+  <div class="col-sm column-1 align-center">
+    <img src="../../assets/images/logo-voluntario-global.png">
+    <p>
+      Ser um voluntário global é transformar <br>
+      seus valores em ação e fazer a diferença <br>
+      em diversas regiões do mundo.
+    </p>
+    <button type="button" class="btn btn-outline-light">SAIBA MAIS</button>
+  </div>
+  <div class="col-sm column-2 align-center">
+    <img src="../../assets/images/logo-empreendedor-global.png">
+    <p>
+      Assuma os desafios de trabalhar em uma <br>
+      Startup e se desenvolva como um lider <br>
+      empreendedor.
+    </p>
+    <button type="button" class="btn btn-outline-light">SAIBA MAIS</button>
+  </div>
+  <div class="col-sm column-3 align-center">
+    <img src="../../assets/images/logo-talentos-globais.png">
+    <p>
+      Agregue diferencial ao seu currículo <br>
+      com essa experiência enriquecedora. <br>
+    </p>
+    <button type="button" class="btn btn-outline-light">SAIBA MAIS</button>
+  </div>
+</div>
+
+<div class="container margin history-session">
+  <h1> Desenvolvendo liderança jovem desde 1948 </h1>
+  <br>
+  <div class="row">
+    <div class="col-sm">
+      <div class="history-session-image">
+        <div class="round icon circle"></div>
+      </div>
+    </div>
+    <div class="col-sm">
+      <p class="sub-title">AIESEC é o maior movimento de liderança <br> jovem do mundo</p>
+      <hr>
+      <p><span>
+        Acreditamos em liderança como a solução fundamental para os problemas do mundo e confiamos na juventude para liderar essa mudança. Através de intercâmbios, proporcionamos oportunidades para jovens explorarem seu potencial de liderança em ambientes desafiadores e multiculturais!
+      </span></p>
+      <div class="row margin">
+        <div class="col-sm align-center">
+          <img src="../../assets/images/icon-people.png" class="coin">
+          <p class="coin-text"><strong>2000</strong> membros <br> no brasil</p>
+        </div>
+        <div class="col-sm align-center">
+          <img src="../../assets/images/icon-world.png" class="coin">
+          <p class="coin-text">Presente em <br> <strong>+120 países</strong></p>
+        </div>
+        <div class="col-sm align-center">
+          <img src="../../assets/images/icon-books.png" class="coin">
+          <p class="coin-text">+12.000 intercâmbios <br> por ano</p>
+        </div>
+        <div class="col-sm align-center">
+          <img src="../../assets/images/icon-handshake.png" class="coin">
+          <p class="coin-text">+100 organizações <br> parceiras no Brasil</p>
+        </div>
+      </div>
+    </div>    
+  </div>
+</div>
+
+<div class="row meet-our-programs-session">
+  <div class="col-sm align-center meet-our-programs-content padding">
+    <p class="align-center margin">
+      O modelo de desenvolvimento de liderança da <strong>AIESEC</strong> prepara jovens para <br>
+      defenderem aquilo que eles acreditam e tornarem-se capaz de fazer a <strong>diferença</strong><br>
+      todos os dias.
+    </p>
+    <button type="button" class="btn btn-light">Conheça nossos programas</button>
+  </div>
+</div>
+
+
+<div class="container experiences-session align-center padding">
+  <h1> Numa experiência com a AIESEC você vai </h1>
+  <br>
+  <div class="row">
+    <div class="col-sm-8 align-left">
+      <ul>
+        <li class="bullet-1 margin">
+          <span>
+            Conhecer e viver seus valores pessoais, enquanto explora  suas paixões e <br> seus pontos fortes.
+          </span>
+        </li>
+        <li class="bullet-2 margin">
+          <span>
+            Provas sua habilidade de fazer uma difernça no mundo e se conectar <br> com temas globais.
+          </span>
+        </li>
+        <li class="bullet-3 margin">
+          <span>
+            Desenvolver sua habilidades de comunicação em um ambiente de <br> diversidade.
+          </span>
+        </li>
+        <li class="bullet-4 margin">
+          <span>
+            Tomar decisões para solucionar problemas diversos em ambientes <br> desafiadores. 
+          </span>
+        </li>
+      </ul>
+    </div>
+    <div class="col-sm">
+      <img src="../../assets/images/hexa.png" width="250" height="275">
+    </div>
+  </div>
+</div>
+
+<div class="container padding align-center our-stories">
+  <h1>As nossas histórias</h1>
+  <br>
+  <div class="row">
+    <div class="col-sm">
+
+      <div class="footer-carousel">
+          <drag-scroll class="carousel" #nav 
+           scrollbar-hidden="true"
+           drag-scroll-y-disabled="true"
+          >
+            <a target="_blank" href="#"> <div class="case-1" drag-scroll-item></div> <!-- <img drag-scroll-item/> --></a>
+            <a target="_blank" href="#"> <div class="case-2" drag-scroll-item></div><!-- <img drag-scroll-item src="../../assets/images/case2.jpg" /> --></a>
+            <a target="_blank" href="#"> <div class="case-3" drag-scroll-item></div><!-- <img drag-scroll-item src="../../assets/images/case3.jpg" /> --></a>
+          </drag-scroll>
+          <div class="footer-carousel-align">
+            <div class="footer-carousel-btn-left"><i (click)="moveLeft()" class="fas fa-chevron-left"></i></div>
+            <div class="footer-carousel-btn-right"><i (click)="moveRight()" class="fas fa-chevron-right"></i></div>
+          </div>
+      </div>
+
+      <!-- <a href="https://placeholder.com">
+        <img src="https://via.placeholder.com/350x250" style="width: 100%; height: 250px;">
+      </a> -->
+    </div>
+  </div>
+</div>
+
+
+<!-- <ul>
     <li routerLink="/landing-page-gv">
         landing page gv
     </li>
@@ -12,6 +172,6 @@
 
 <p>
   Landing
-</p>
+</p> -->
 
 <app-landing-footer></app-landing-footer>
