--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -1,9 +1,284 @@
-ul {
-  li {
-    padding: 10px;
-    &:first-child {
-      cursor: pointer;
-      color:blue;
+@import "../../scss/_global.scss";
+
+app-lading-page {
+	background-image: url('../../assets/images/land-bg.png');
+}
+
+.header {
+	padding: 0px;
+	margin-bottom: 10px;
+	height: 450px;
+	position: relative;
+	background-image: url('../../assets/images/header.png');
+	background-size: cover;
+}
+
+.header h1, .header p {
+	color: white;
+	font-size: 18px
+}
+
+.header h1 {
+	font-size: 42px;
+}
+
+.header button {
+	margin-top: 40px;
+}
+
+.header-top-triangle {
+	width: 0;
+	height: 0;
+	border-style: solid;
+	border-width: 525px 900px 0 0;
+	border-color: #3877bc transparent transparent transparent;
+	line-height: 0px;
+	_border-color: #007bff #000000 #000000 #000000;
+	_filter: progid:DXImageTransform.Microsoft.Chroma(color='#000000');
+	position: absolute;
+	top: 0px;
+  left: 0px;
+	z-index: 999;
+}
+
+.header-bottom-triangle {
+	width: 0;
+	height: 0;
+	border-style: solid;
+	border-width: 0 0 234px 400px;
+	border-color: transparent transparent #3877bc transparent;
+	line-height: 0px;
+	_border-color: #000000 #000000 #007bff #000000;
+	_filter: progid:DXImageTransform.Microsoft.Chroma(color='#000000');
+	position: absolute;
+	bottom: 0px;
+  right: 0px;
+  opacity: 0.7;
+}
+
+.column-1 {
+	background-color: #ef4132;
+	height: 225;
+	color: white;
+}
+
+.column-2 {
+	background-color: #34bc9b;
+	height: 225;
+	color: white;
+}
+
+.column-3 {
+	background-color: #1790a1;
+	height: 225px;
+	color: white;
+}
+
+.margin {
+	margin-top: 30px;
+	margin-bottom: 30px;
+}
+
+.padding {
+	padding: 30px;
+}
+
+.menu {
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 99999;
+	font-size: 10px;
+	color: white;
+}
+
+.menu a {
+	color: white;
+}
+
+.menu li {
+    float: left;
+    margin: 5px;
+}
+
+.menu ul {
+    list-style-type: none;
+    margin: 35px;
+    padding: 0;
+    overflow: hidden;
+}
+
+.menu .content {
+	margin-left: 20px;
+}
+
+.aiesec-logo {
+	width: 165px; 
+	height: 25px;
+	margin-right: 45px;
+}
+
+.no-margin {
+	margin: 0px;
+}
+
+.align-left {
+	text-align: left;
+}
+
+.align-center {
+	text-align: center;
+}
+
+.align-left {
+	text-align: left;
+}
+
+.global-columns img {
+	width: 190px; 
+	height: 140px;
+	margin-top: -20px;
+}
+
+.global-columns p {
+	height: 50px;
+	color: white;
+	margin-top: -30px;
+	font-size: 14px;
+}
+
+.global-columns button {
+	margin-top: 20px;
+}
+
+.logo-empreendedor-global {
+	background-image: url('../../assets/images/logo-voluntario-global.png');
+	background-size: cover;
+}
+
+.history-session h1 {
+	text-align: center;
+	font-weight: bold;
+	margin-bottom: 75px;
+}
+
+.history-session-image {
+	background-image: url('../../assets/images/party.JPG');
+	background-size: cover;
+	width:450px;
+	height:300px;
+}
+
+.history-session span {
+	color: #b9b9b9;
+}
+
+.history-session .sub-title {
+	text-align: left;
+	font-weight: bold;
+	font-size: 20px;
+}
+
+.history-session .coin {
+	height: 50px;
+	width: 50px;
+}
+
+.history-session .coin-text {
+	font-size: 12px;
+}
+
+.meet-our-programs-session {
+	background-color: #437abe;
+	height: 300px;
+	color: white;
+	font-size: 30px;
+}
+
+.meet-our-programs-session p {
+	color: white;
+	font-size: 28px;
+	font-weight: lighter;
+}
+
+.meet-our-programs-session button {
+	color: #437abe;
+}
+
+.experiences-session {
+	font-size: 18px;
+}
+
+.experiences-session span {
+	color: #b9b9b9;
+}
+
+.bullet-1 {
+	color: #fdc945;
+}
+.bullet-2 {
+	color: #0cb89a;
+}
+.bullet-3 {
+	color: #f15b45;
+}
+.bullet-4 {
+	color: #965ba5;
+}
+
+.round {
+    position: absolute;
+    right: 12%;
+    top: 50%;
+    background-size: 65%;
+    margin-top: -37.5px;
+    background-color: #fcb215;
+}
+
+.our-stories {
+  h1 {
+    padding-bottom: 40px;
+  }
+  .footer-carousel {
+    .footer-carousel-btn-left {
+      position: absolute;
+      top: 64%;
+      padding: 11px;
+      margin-left: -40px;
+      i {
+        color: $default;
+      }
+    }
+    .footer-carousel-btn-right {
+      position: absolute;
+      top: 64%;
+      right: -28px;
+      padding: 11px;
+      i {
+        color: $default;
+      }
     }
   }
+}
+
+.carousel {
+  background-color: #FFFFFF;  
+}
+
+.case-1 {
+	background-image: url('../../assets/images/case1.jpg');
+	width: 100%; 
+	height:350px;
+}
+
+.case-2 {
+	background-image: url('../../assets/images/case2.jpg');
+	width: 100%; 
+	height:350px;
+}
+
+.case-3 {
+	background-image: url('../../assets/images/case3.jpg');
+	width: 100%; 
+	height:350px;
 }
